Movable list extracted

--- a/src/components/Places/Places.sass
+++ b/src/components/Places/Places.sass
@@ -13,6 +13,7 @@
     color: firebrick
     font-size: 16px
     border: none
+    outline: none
     float: right
     &:hover
       cursor: pointer
