--- a/src/components/Places/Places.sass
+++ b/src/components/Places/Places.sass
@@ -7,6 +7,12 @@
     width: 300px
     line-height: 24px
     margin-bottom: 10px
+    &:hover
+      cursor: grab
+
+  &__places-item_grabbing
+    &:hover, &:active
+      cursor: grabbing
 
   &__places-button
     background-color: transparent
