--- a/src/components/Input/Input.sass
+++ b/src/components/Input/Input.sass
@@ -1,11 +1,11 @@
 .App
   &__input
     background-color: burlywood
-    width: 290px
+    width: calc(100% - 50px)
     height: 30px
     padding: 0 25px
     border: none
-    border-radius: 0 4px 4px 0
+    border-radius: 4px
     &:focus
       outline: none
       background-color: bisque
