--- a/src/components/Places/Places.sass
+++ b/src/components/Places/Places.sass
@@ -1,12 +1,16 @@
 .App
   &__places
-    display: inline-block
+    margin-left: -24px
 
   &__places-item
     color: whitesmoke
-    width: 300px
     line-height: 24px
     margin-bottom: 10px
+
+  &__value-wrapper
+    display: flex
+    align-items: center
+    justify-content: space-between
 
   &__places-button
     background-color: transparent
@@ -14,7 +18,6 @@
     font-size: 16px
     border: none
     outline: none
-    float: right
     &:hover
       cursor: pointer
       color: red
