--- a/src/components/YMap/YMap.sass
+++ b/src/components/YMap/YMap.sass
@@ -1,7 +1,8 @@
 .App
   &__map-wrapper
-    float: right
+    width: 100%
+    height: 100%
 
   &__map
-    width: 700px
-    height: 500px
+    width: 100%
+    height: 100%
