--- a/src/components/Places/Places.sass
+++ b/src/components/Places/Places.sass
@@ -1,6 +1,8 @@
 .App
   &__places
     margin-left: -24px
+    height: calc(100% - 46px)
+    overflow-y: auto
 
   &__places-item
     color: whitesmoke
